--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,12 @@
 spring:
   application:
     name: cultureevents
+  mongodb:
+    uri: mongodb://localhost:27017/eventsdb
+
+server:
+  port: 8080
+
+logging:
+  level:
+    com.cultureevents: DEBUG
