--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,18 @@
 spring:
-  application:
-    name: cultureevents
-  mongodb:
-    uri: mongodb://localhost:27017/eventsdb
+  datasource:
+    url: jdbc:postgresql://localhost:5432/cultureevents
+    username: postgres
+    password: culture
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: validate #validate на проде
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
 
 server:
   port: 8080
-
-logging:
-  level:
-    com.cultureevents: DEBUG
