--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 			<artifactId>byte-buddy</artifactId>
 			<version>1.14.18</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.jsoup</groupId>
+    		<artifactId>jsoup</artifactId>
+    		<version>1.17.2</version>
+		</dependency>
 
 	</dependencies>
 
