--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -69,6 +69,12 @@
 			<version>1.14.18</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.17.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
