--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/cultureevents
+    url: jdbc:postgresql://postgres:5432/cultureevents
     username: postgres
     password: culture
     driver-class-name: org.postgresql.Driver
