--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,11 +1,10 @@
-version: '3.8'
 services:
   postgres:
     image: postgres:15
     environment:
       POSTGRES_DB: cultureevents
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: culture
     ports:
       - "5432:5432"
     volumes:
@@ -15,10 +14,6 @@ services:
     build: .
     ports:
       - "8080:8080"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/cultureevents
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: password
     depends_on:
       - postgres
 
