--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -2,12 +2,12 @@ spring:
   datasource:
     url: jdbc:postgresql://postgres:5432/cultureevents
     username: postgres
-    password: culture
+    password: password
     driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
-      ddl-auto: validate #validate на проде
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
