--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     environment:
       POSTGRES_DB: cultureevents
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: culture
+      POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
     volumes:
